grammar.js
        source_file: $ => seq(
            repeat(choice($.directive, $._newline)),
            choice(
                $.diagram_sequence,
                $.diagram_class,
                $.diagram_state,
                $.diagram_gantt,
                $.diagram_pie,
                $.diagram_flow,
                $.diagram_er,
                $.diagram_mindmap,
                $.diagram_gitgraph,
                $.diagram_journey,
        )),

        directive: $ => seq(
            "%%{",
            $.type_directive,
            alias(/[^%]*\}%%/, $.arg_directive),
        ),

        diagram_gantt: $ => seq(
            kwd("gantt"), $._newline,
            repeat(choice($._gantt_stmt, $._newline))
        ),

        _gantt_stmt: $ => choice(
            $.gantt_stmt_dateformat,
            $.gantt_stmt_inclusiveenddates,
            $.gantt_stmt_topaxis,
            $.gantt_stmt_axisformat,
            $.gantt_stmt_includes,
            $.gantt_stmt_excludes,
            $.gantt_stmt_todaymarker,
            $.gantt_stmt_title,
            $.gantt_stmt_section,
            $.gantt_stmt_task,
            // $.gantt_stmt_click,
        ),

        gantt_stmt_dateformat: $ => seq(
            kwd("dateformat"), alias($.gantt_meta_format, $.gantt_date_format),
        ),
        gantt_stmt_excludes: $ => seq(
            kwd("excludes"), alias($.gantt_meta_format, $.gantt_excludes),
        ),
        gantt_stmt_title: $ => seq(
            kwd("title"), alias($.gantt_meta_format, $.gantt_title),
        ),
        gantt_stmt_section: $ => seq(
            kwd("section"), alias($.gantt_meta_format, $.gantt_section),
        ),

        gantt_stmt_task: $ => seq(
            $.gantt_task_text, ":", $.gantt_task_data,
        ),

        /// pie chart
        diagram_pie: $ => seq(
            kwd("pie"),
            optional($.pie_showdata),
            repeat(choice($._pie_stmt, $._newline))
        ),

        _pie_stmt: $ => choice(
            $.pie_stmt_title,
            $.pie_stmt_element,
        ),

        pie_stmt_title: $ => seq(
            kwd("title"),
            optional($.pie_title),
        ),

        pie_stmt_element: $ => seq(
            $.pie_label,
            ":",
            $.pie_value,
        ),

        /// flow chart
        diagram_mindmap: $ => seq(
            reserved("mindmap"),
            $._newline,
            // repeat($.mmap_node),
            sep($.mmap_node, $._newline),
            optional($._newline),
        ),

        mmap_node: $ => seq(
            $._whitespace,
            $.mmap_node_id,
            optional(choice(
                $.mmap_node_square,
                $.mmap_node_rounded,
                $.mmap_node_circle,
                $.mmap_node_cloud,
                $.mmap_node_bang,
                $.mmap_node_hexagon,
            )),
            optional($.mmap_icon),
            optional($.mmap_class),
        ),

        mmap_node_id: $ => $._mindmap_text,
        mmap_markdown: $ => prec(1, seq(
            $._md_start,
            alias(/[^`"]+/, $.md_text),
            $._md_end
        )),
        mmap_text: $ => seq(/[^"][^`]/, $._mindmap_text),

        mmap_node_content: $ => choice($.mmap_markdown, $.mmap_text),

        mmap_node_square: $ => seq("[", $.mmap_node_content, "]"),
        mmap_node_rounded: $ => seq("(", $.mmap_node_content, ")"),
        mmap_node_circle: $ => seq("((", $.mmap_node_content, "))"),
        mmap_node_cloud: $ => seq(")", $.mmap_node_content, "("),
        mmap_node_bang: $ => seq("))", $.mmap_node_content, "(("),
        mmap_node_hexagon: $ => seq("{{", $.mmap_node_content, "}}"),

        mmap_class: _ => seq(/\n?\s*:::/, /[_a-zA-Z0-9- ]+/),
        // experimental icon https://mermaid.js.org/syntax/mindmap.html#icons
        mmap_icon: _ => seq(/\n?\s*::icon\(/, /[^)\n\r]+/, ")"),

        /// gitgraph diagram
        diagram_journey: $ => seq(
            kwd("journey"),
            repeat(choice($._journey_stmt, $._newline)),
        ),

        _journey_stmt: $ => choice(
            $.journey_title,
            $.journey_section,
        ),

        journey_title: $ => seq(
            kwd("title"),
            $.journey_title_text,
            $._newline,
        ),

        journey_title_text: $ => $._journey_title_text,

        journey_section: $ => seq(
            kwd("section"), $.journey_section_title,
            $._newline,
            repeat($.journey_task),
        ),

        journey_section_title: $ => $._journey_section_title,

        journey_task: $ => seq(
            $.journey_task_name,
            ":",
            $.journey_task_score,
            ":",
            $.journey_task_actors,
            $._newline,
        ),

        journey_task_name: $ => $._journey_task_name,

        journey_task_score: $ => $._journey_score,

        journey_task_actors: $ => seq(
            $._journey_actor,
            repeat(seq(",", optional($._whitespace), $._journey_actor)),
        ),

        ... tokensFunc
    }
});

/// common functions
function kwd(word) {
    return alias(reserved(caseInsensitive(word)), word)
}

function reserved(regex) {
    return token(prec(1, new RegExp(regex)))
}

function caseInsensitive(word) {
    return word.split('')
        .map(letter => `[${letter}${letter.toUpperCase()}]`)
        .join('')
}

function optseq(...args) {
    return optional(seq(...args))
}

function sep(rule, delimiter) {
  return seq(rule, repeat(seq(delimiter, rule)));
}
