test/corpus/gantt.txt
==========================
Simple Gantt chart
==========================
gantt
    dateFormat  YYYY-MM-DD
    title       Adding GANTT diagram functionality to mermaid
    excludes    weekends
    %% (`excludes` accepts specific dates in YYYY-MM-DD format, days of the week ("sunday") or "weekends", but not the word "weekdays".)

    section A section
    Completed task            :done,    des1, 2014-01-06,2014-01-08
    Active task               :active,  des2, 2014-01-09, 3d
    Future task               :         des3, after des2, 5d
    Future task2              :         des4, after des3, 5d

    section Critical tasks
    Completed task in the critical line :crit, done, 2014-01-06,24h
    Implement parser and jison          :crit, done, after des1, 2d
    Create tests for parser             :crit, active, 3d
    Future task in critical line        :crit, 5d
    Create tests for renderer           :2d
    Add to mermaid                      :1d
    Functionality added                 :milestone, 2014-01-25, 0d

    section Documentation
    Describe gantt syntax               :active, a1, after des1, 3d
    Add gantt diagram to demo page      :after a1  , 20h
    Add another diagram to demo page    :doc1, after a1  , 48h

    section Last section
    Describe gantt syntax               :after doc1, 3d
    Add gantt diagram to demo page      :20h
    Add another diagram to demo page    :48h

---

    (source_file
      (diagram_gantt
        (gantt_stmt_dateformat
          (gantt_date_format))
        (gantt_stmt_title
          (gantt_title))
        (gantt_stmt_excludes
          (gantt_excludes))
        (comment)
        (gantt_stmt_section
          (gantt_section))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_section
          (gantt_section))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_section
          (gantt_section))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_section
          (gantt_section))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))
        (gantt_stmt_task
          (gantt_task_text)
          (gantt_task_data))))

==========================
Gantt without title
==========================
gantt
    dateFormat YYYY-MM-DD
    section Development
    Task 1 :2024-01-01, 5d
    Task 2 :2024-01-06, 3d

---

(source_file
  (diagram_gantt
    (gantt_stmt_dateformat
      (gantt_date_format))
    (gantt_stmt_section
      (gantt_section))
    (gantt_stmt_task
      (gantt_task_text)
      (gantt_task_data))
    (gantt_stmt_task
      (gantt_task_text)
      (gantt_task_data))))

==========================
Gantt with single section
==========================
gantt
    title Minimal Project
    dateFormat YYYY-MM-DD
    section Phase 1
    Setup :2024-01-01, 2d

---

(source_file
  (diagram_gantt
    (gantt_stmt_title
      (gantt_title))
    (gantt_stmt_dateformat
      (gantt_date_format))
    (gantt_stmt_section
      (gantt_section))
    (gantt_stmt_task
      (gantt_task_text)
      (gantt_task_data))))

==========================
Gantt without sections
==========================
gantt
    title Simple Timeline
    dateFormat YYYY-MM-DD
    Task A :2024-01-01, 5d
    Task B :2024-01-06, 3d

---

(source_file
  (diagram_gantt
    (gantt_stmt_title
      (gantt_title))
    (gantt_stmt_dateformat
      (gantt_date_format))
    (gantt_stmt_task
      (gantt_task_text)
      (gantt_task_data))
    (gantt_stmt_task
      (gantt_task_text)
      (gantt_task_data))))
